# BLURAnything

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
assets/: BLURAnything.icns  generate_icon.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md
scripts/: release_notes.py  setup-venv.sh
src/bluranything/: __init__.py  __main__.py  app.py
src/bluranything/core/: __init__.py  blur.py  compositor.py  document.py  effects.py  faces.py  imageio.py  mask.py  session.py
src/bluranything/resources/: __init__.py
src/bluranything/ui/: __init__.py  clipboard.py  editor_canvas.py  image_view.py  main_window.py  qt_image.py  scaled_view.py  screenshot.py  strings.py  theme.py
tests/: conftest.py  helpers.py  test_app.py  test_blur.py  test_compositor.py  test_document.py  test_editor_canvas.py  test_effects.py  test_faces.py  test_imageio.py  test_main_window.py  test_mask.py  test_qt_image.py  test_release_notes.py  test_scaled_view.py  test_session.py  test_version.py
