[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bluranything"
description = "Desktop app to blur sensitive parts of images and screenshots before sharing."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Safronus" }]
keywords = ["blur", "privacy", "screenshot", "image", "anonymize", "qt", "pyside6"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics :: Editors",
]
dependencies = [
  "PySide6>=6.6",
  "Pillow>=10.0",
  "pillow-heif>=0.16",  # HEIC/HEIF read & write support for Pillow
  "opencv-python-headless>=4.9,<6",  # offline face detection (YuNet/Haar); headless avoids GUI-lib clashes with Qt; <5 for a stable API
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Safronus/BLURAnything"
Changelog = "https://github.com/Safronus/BLURAnything/blob/main/CHANGELOG.md"
Issues = "https://github.com/Safronus/BLURAnything/issues"

[project.gui-scripts]
bluranything = "bluranything.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-qt>=4.4",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pip-audit>=2.7",
  "vulture>=2.11",
  "build>=1.2",
]

[tool.hatch.version]
path = "src/bluranything/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bluranything"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
# The multiplication sign is used intentionally in dimension strings ("40×30").
allowed-confusables = ["×"]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # bugbear
  "C4",  # comprehensions
  "SIM", # simplify
  "RET", # return
  "ARG", # unused arguments
  "PTH", # pathlib
  "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
# Qt virtual methods keep their camelCase names (N802) and fixed signatures, so
# an overridden handler may legitimately ignore its event argument (ARG002).
"src/bluranything/ui/*" = ["N802", "ARG002"]
# Pytest fixtures are injected via (often unused-looking) function arguments;
# monkeypatched stubs may ignore their lambda arguments.
"tests/*" = ["ARG001", "ARG005"]

[tool.mypy]
python_version = "3.11"
strict = true
pretty = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["pytestqt.*", "pillow_heif.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
addopts = "-ra"

[tool.coverage.run]
source = ["bluranything"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.vulture]
paths = ["src"]
min_confidence = 80
